--- a/src/App.css
+++ b/src/App.css
@@ -102,4 +102,11 @@ header h2 {
 
 .beer {
   color: white;
+  margin: 10px;
+  width: 100%;
+}
+.beers-container {
+  display: flex;
+  width: 100%;
+  font-size: 10px;
 }
