--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   --textColor: orange;
   --bgColorSections: rgba(0, 0, 0, 0.4);
   --backgroundOpacity: 0.4;
-  --headingSize: 25px;
+  --headingSize: 23px;
   --gridSpace: 10px;
   --borderRadiusSection: 50px;
 }
@@ -48,10 +48,11 @@ header h2 {
 
 .container-infoSections {
   height: 90%;
-  width: 100%;
+  width: 90%;
   display: grid;
-  padding: var(--gridSpace);
+  padding: calc(var(--gridSpace));
   margin: auto;
+  grid-row-gap: 10px;
   grid-template-columns: 50% 25% 25%;
   grid-template-rows: 50% 50%;
   grid-template-areas:
@@ -60,7 +61,7 @@ header h2 {
 }
 
 .dashboard-section {
-  margin: var(--gridSpace);
+  /* margin: var(--gridSpace); */
   background-color: var(--bgColorSections);
   border-radius: var(--borderRadiusSection);
   height: 100%;
@@ -112,6 +113,8 @@ header h2 {
 .beerName {
   margin-top: 20px;
   text-align: center;
+  display: block;
+  height: 42px;
 }
 
 .beerStorage {
@@ -151,8 +154,24 @@ header h2 {
   width: 100%;
 }
 
+.bartenders-container .astronaut-container {
+  width: 35%;
+  margin: auto;
+  position: relative;
+}
+
+.bartenders-container .astronaut-container > img {
+  position: absolute;
+  width: 23%;
+  left: 25%;
+  bottom: 70%;
+  height: auto;
+  z-index: 5;
+}
+
 .bartenders-container svg {
-  height: 100%;
+  width: 100%;
+  z-index: 11;
 }
 /* ----------------------------------- */
 /* SERVING------------------------------- */
@@ -164,13 +183,19 @@ header h2 {
 .serving-container {
   display: flex;
   flex-direction: column;
-  height: 70%;
+  height: 80%;
 }
 
 .alien-head {
-  width: 80%;
+  width: 100%;
   display: block;
-  margin: 20px auto;
+  margin: 0px auto;
+  height: 50%;
+}
+
+#alien-head {
+  overflow: visible;
+  width: 40%;
 }
 
 .servingOrders-container {
@@ -179,18 +204,22 @@ header h2 {
   bottom: 25px;
   color: white;
   width: 100%;
-  height: 40px;
+  height: 30%;
+  margin-bottom: 5%;
+  margin-top: auto;
   /* height: 20%; */
   align-items: center;
+  justify-content: center;
 }
 
 .serving-order {
   display: flex;
   position: relative;
   align-items: center;
-  width: 33%;
+  width: 20%;
   height: 100%;
-  margin: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
 
   /* background-image: url("./images/svgs/planet.svg");
   background-position: center;
@@ -211,18 +240,6 @@ header h2 {
 }
 
 /* ----------------------------------- */
-/* QUEUE------------------------------- */
-.Queue {
-  grid-area: queue;
-}
-
-.queue-container {
-  display: flex;
-  align-items: center;
-  margin-top: 20px;
-  width: 100%;
-}
-/* ----------------------------------- */
 
 /* EACH SECTION------------------------------- */
 
@@ -235,13 +252,32 @@ header h2 {
 
 /* ORDERS */
 #alien {
-  width: 60%;
+  width: 50%;
+  height: 90%;
   display: block;
-  margin: auto;
+  margin: 0 auto;
 }
 
-#queueText {
+#alien-sign {
+  /* position: relative; */
 }
+
+/* QUEUE------------------------------- */
+.Queue {
+  grid-area: queue;
+}
+
+.queue-container {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  width: 100%;
+  height: 70%;
+}
+
+/* ----------------------------------- */
+
+/* ------------- */
 
 svg {
   display: block;
@@ -429,6 +465,7 @@ svg#astronaut.startPayment g#astronaut-left-palm #sign {
   }
   .beerName {
     font-size: 13px;
+    height: 30px;
   }
 
   /* Bartenders */
@@ -478,7 +515,8 @@ svg#astronaut.startPayment g#astronaut-left-palm #sign {
     grid-template-rows: auto auto;
     grid-template-areas:
       "beer beer beer"
-      "bartenders serving serving "
+      "bartenders bartenders bartenders"
+      "serving serving serving"
       "queue queue queue";
   }
 }
