deleted unnecessary comments

--- a/src/styling/orders.css
+++ b/src/styling/orders.css
@@ -36,6 +36,21 @@
   font-size: 51.7628px;
 }
 
+.st0,
+.st1,
+.st2,
+.st3,
+.st4,
+.st5,
+.st6,
+.st7,
+.st8,
+.st9,
+.st10,
+.st11 {
+  transition: 2s;
+}
+
 /* -------------------------------------------- */
 
 .redAlien .st0 {
