--- a/src/App.css
+++ b/src/App.css
@@ -45,8 +45,66 @@ header h2 {
   margin-right: 0px;
 }
 /* --------------------------------------- */
+.container-infoSections.hidden {
+  height: 50vh;
+  overflow: hidden;
+}
+/* LOADING ---------------------------------------- */
+
+.loading {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  color: white;
+  z-index: 80;
+  background-color: darkblue;
+  top: 0;
+  left: 0;
+}
+
+.circles-container {
+  /* width: auto;
+  height: auto; */
+  display: block;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  /* margin: 20% auto; */
+  /* overflow: hidden; */
+}
+
+#loading-c1,
+#loading-c2 {
+  /* border: 5px solid white; */
+  display: block;
+  border-radius: 500px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  /* left: 25vw;
+  top: 25vh; */
+}
+
+#load_Text {
+  text-align: center;
+  color: black;
+  display: block;
+  width: 100%;
+  position: absolute;
+  z-index: 10;
+  /* top: 45vh; */
+  top: 110px;
+
+  /* margin: 25vw auto; */
+}
+/* ------------------------------ */
 
 .container-infoSections {
+  /* position: relative; */
   height: 90%;
   width: 90%;
   display: grid;
@@ -537,4 +595,15 @@ svg#astronaut.startPayment g#astronaut-left-palm #sign {
       "serving serving serving"
       "queue queue queue";
   }
+
+  /* .circles-container {
+    margin: 0;
+  }
+
+  #loading-c1,
+  #loading-c2 {
+    width: 30vw;
+    height: 30vw;
+    left: 35vw;
+  } */
 }
